--- a/app/sass/components/_theme.scss
+++ b/app/sass/components/_theme.scss
@@ -188,6 +188,9 @@ Table of Content:
     }
     &--form {
       padding-bottom: 10rem;
+      .bootstrap-select {
+        width: 100%;
+      }
     }
     &--sticky {
       display: none;
